--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -7,12 +7,12 @@ on:
 env:
   AWS_REGION: us-east-1
   IMAGE_TAG: master
-  ECR_REGISTRY: 931003996958.dkr.ecr.us-east-1.amazonaws.com
-  ECR_REPOSITORY: devops-external
+  ECR_REGISTRY: kandula17
+  ECR_REPOSITORY: devops-external1
 
 jobs:
   build:
-    runs-on: [self-hosted]
+    runs-on: [self-hosted , dev]
 
     steps:
       - uses: actions/checkout@v3
@@ -20,16 +20,25 @@ jobs:
         id: checkout
         run: echo "test"
 
+  #    - name: set lower case repository name
+  #      id: lc-repository
+  #      run: |
+  #        echo "REPOSITORY_LC=${REPOSITORY,,}" >>${GITHUB_ENV}
+  #      env:
+  #        REPOSITORY: "${{ github.repository }}"
 
-      - name: Build, tag, and push image to Amazon ECR
-        id: build-image
-        env:
-          GIT_BRANCH: ${{ github.ref_name }}
-        run: |
-          # Build a docker container and
-          # push it to ECR so that it can
-          # be deployed to ECS.
-          aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.ECR_REGISTRY }}
-          docker build -t ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.GIT_BRANCH }} -f Dockerfile .
-          docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.GIT_BRANCH }}
-          docker system prune --force --filter "until=24h"
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1  # Replace with your region          
+
+      - name: Log in to DockerHub
+        run: sudo echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+ 
+      - name: Build Docker image
+        run: sudo docker build -t kandula17/devops-external1:${{ env.IMAGE_TAG }} .
+ 
+      - name: Push Docker image
+        run: sudo docker push kandula17/devops-external1:${{ env.IMAGE_TAG }}          
